force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Represents a delivery project created from a won opportunity. Tracks project execution, timeline, and resources.</description>
    <label>Project</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>