force-app/main/default/objects/Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client account for this project</description>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Projects</relationshipLabel>
    <relationshipName>Client_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>